--- a/src/main/webapp/admin/locaties.xhtml
+++ b/src/main/webapp/admin/locaties.xhtml
@@ -12,68 +12,65 @@
         <f:metadata >
             <f:viewAction action="#{ViewController.setActiveTab('locaties')}" />
         </f:metadata>
+
+        <ui:define name="footer"></ui:define>
         <ui:define name="title">Locaties beheren</ui:define>
         <ui:define name="content">
-            <div class="container-fluid">
-                <div class="row admintitle">
+            <h:form>
+                <div class="container">
                     <div class="col">
                         <h1>Locaties beheren</h1>
                     </div>
-                    <div class="col-auto">
-                        <h:form >
-                            <h:commandButton action="#{LocatieController.newLocatie()}" value="Maak nieuwe locatie aan" styleClass="btn btn-primary">
-                                <f:ajax event="action" render="@all" onevent="showLocatieModal"/>
-                            </h:commandButton>
-                            <div class="modal fade" id="locatieModal" tabindex="-1" role="dialog" aria-labelledby="locatieModallabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="locatieModallabel">
-                                                Locatie aanpassen/wijzigen
-                                            </h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                <span aria-hidden="true">&times;</span>
-                                            </button>
+
+                    <div class="modal fade" id="locatieModal" tabindex="-1" role="dialog" aria-labelledby="locatieModallabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="locatieModallabel">
+                                        Locatie aanpassen/wijzigen
+                                    </h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+
+                                <div class="modal-body">
+                                    <div class="form-group row">
+                                        <label for="updateNaam" class="col-sm-2 col-form-label">Naam</label>
+                                        <div class="col-sm-10">
+                                            <h:inputText value="#{LocatieController.geselecteerdeLocatie.naam}" binding="#{naam}" styleClass="form-control" id="updateNaam"/>
                                         </div>
+                                    </div>
 
-                                        <div class="modal-body">
-                                            <div class="form-group row">
-                                                <label for="updateNaam" class="col-sm-2 col-form-label">Naam</label>
-                                                <div class="col-sm-10">
-                                                    <h:inputText value="#{LocatieController.geselecteerdeLocatie.naam}" binding="#{naam}" styleClass="form-control" id="updateNaam"/>
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group row">
-                                                <label for="updateStad" class="col-sm-2 col-form-label">Stad</label>
-                                                <div class="col-sm-10">
-                                                    <h:inputText value="#{LocatieController.geselecteerdeLocatie.stad}" binding="#{stad}" styleClass="form-control" id="updateStad"/>
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group row">
-                                                <label for="updateCode" class="col-sm-2 col-form-label">Code</label>
-                                                <div class="col-sm-10">
-                                                    <h:inputText value="#{LocatieController.geselecteerdeLocatie.code}" binding="#{code}" styleClass="form-control" id="updateCode"/>
-                                                </div>
-                                            </div>
-
-                                            <div class="form-group row">
-                                                <label for="updateLand" class="col-sm-2 col-form-label">Land</label>
-                                                <div class="col-sm-10">
-                                                    <h:inputText value="#{LocatieController.geselecteerdeLocatie.land}" binding="#{land}" styleClass="form-control" id="updateLand"/>
-                                                </div>
-                                            </div>
+                                    <div class="form-group row">
+                                        <label for="updateStad" class="col-sm-2 col-form-label">Stad</label>
+                                        <div class="col-sm-10">
+                                            <h:inputText value="#{LocatieController.geselecteerdeLocatie.stad}" binding="#{stad}" styleClass="form-control" id="updateStad"/>
                                         </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                            <h:commandButton type="submit" action="#{LocatieController.updateLocatie(LocatieController.geselecteerdeLocatie.id, naam.value, stad.value, code.value, land.value)}" value="Sla locatie op" styleClass="btn btn-primary" />
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label for="updateCode" class="col-sm-2 col-form-label">Code</label>
+                                        <div class="col-sm-10">
+                                            <h:inputText value="#{LocatieController.geselecteerdeLocatie.code}" binding="#{code}" styleClass="form-control" id="updateCode"/>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group row">
+                                        <label for="updateLand" class="col-sm-2 col-form-label">Land</label>
+                                        <div class="col-sm-10">
+                                            <h:inputText value="#{LocatieController.geselecteerdeLocatie.land}" binding="#{land}" styleClass="form-control" id="updateLand"/>
                                         </div>
                                     </div>
                                 </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <h:commandButton type="submit" action="#{LocatieController.updateLocatie()}" value="Sla locatie op" styleClass="btn btn-primary" />
+                                </div>
                             </div>
-                        </h:form>
+                        </div>
                     </div>
+
                     <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
@@ -94,68 +91,75 @@
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="accordion" id="accordionLocaties">
-                    <ui:repeat value="#{LocatieController.locaties}" var="locatie">
-                        <div class="card">
-                            <div class="card-header" id="heading#{locatie.id}">
-                                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse#{locatie.id}" aria-controls="collapse#{locatie.id}">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h:outputText value="#{locatie}" />
+                    <div class="accordion" id="accordionLocaties">
+                        <ui:repeat value="#{LocatieController.locaties}" var="locatie">
+                            <div class="card">
+                                <div class="card-header" id="heading#{locatie.id}">
+                                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse#{locatie.id}" aria-controls="collapse#{locatie.id}">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <h:outputText value="#{locatie}" />
+                                            </div>
+                                        </div>
+                                    </button>
+                                    <div class="float-right">
+                                        <div class="row">
+                                            <div class="col-5">
+                                                <h:commandButton value="Pas aan" styleClass="btn btn-primary">
+                                                    <f:setPropertyActionListener target="#{LocatieController.geselecteerdeId}" value="#{locatie.id}" />
+                                                    <f:ajax event="action" render="@all" onevent="showLocatieModal"/>
+                                                </h:commandButton>
+                                            </div>
+                                            <div class="offset-1 col-5">
+                                                <h:commandButton value="Verwijder" styleClass="btn btn-danger">
+                                                    <f:setPropertyActionListener target="#{LocatieController.geselecteerdeId}" value="#{locatie.id}" />
+                                                    <f:ajax event="action" render="@all" onevent="showConfirmModal"/>
+                                                </h:commandButton>
+                                            </div>
                                         </div>
                                     </div>
-                                </button>
-                                <div class="float-right">
-                                    <div class="row">
-                                        <div class="col-5">
-                                            <h:commandButton value="Pas aan" styleClass="btn btn-primary">
-                                                <f:setPropertyActionListener target="#{LocatieController.geselecteerdeId}" value="#{locatie.id}" />
-                                                <f:ajax event="action" render="@all" onevent="showLocatieModal"/>
-                                            </h:commandButton>
+                                </div>
+                                <div id="collapse#{locatie.id}" class="collapse" aria-labelledby="heading#{locatie.id}" data-parent="#accordionLocaties">
+                                    <div class="card-body">
+                                        <div class="form-group row">
+                                            <label for="naam#{locatie.id}" class="col-sm-2 col-form-label">Naam</label>
+                                            <div class="col-sm-10">
+                                                <h:inputText value="#{locatie.naam}" styleClass="form-control" id="displayNaam#{locatie.id}" readonly="true"/>
+                                            </div>
                                         </div>
-                                        <div class="offset-1 col-5">
-                                            <h:commandButton value="Verwijder" styleClass="btn btn-danger">
-                                                <f:setPropertyActionListener target="#{LocatieController.geselecteerdeId}" value="#{locatie.id}" />
-                                                <f:ajax event="action" render="@all" onevent="showConfirmModal"/>
-                                            </h:commandButton>
+                                        <div class="form-group row">
+                                            <label for="stad#{locatie.id}" class="col-sm-2 col-form-label">Stad</label>
+                                            <div class="col-sm-10">
+                                                <h:inputText value="#{locatie.stad}" styleClass="form-control" id="displayNaamStad#{locatie.id}" readonly="true"/>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label for="code#{locatie.id}" class="col-sm-2 col-form-label">Code</label>
+                                            <div class="col-sm-10">
+                                                <h:inputText value="#{locatie.code}" styleClass="form-control" id="displayNaamCode#{locatie.id}" readonly="true"/>
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label for="land#{locatie.id}" class="col-sm-2 col-form-label">Land</label>
+                                            <div class="col-sm-10">
+                                                <h:inputText value="#{locatie.land}" styleClass="form-control" id="displayNaamLand#{locatie.id}" readonly="true"/>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div id="collapse#{locatie.id}" class="collapse" aria-labelledby="heading#{locatie.id}" data-parent="#accordionLocaties">
-                                <div class="card-body">
-                                    <div class="form-group row">
-                                        <label for="naam#{locatie.id}" class="col-sm-2 col-form-label">Naam</label>
-                                        <div class="col-sm-10">
-                                            <h:inputText value="#{locatie.naam}" styleClass="form-control" id="displayNaam#{locatie.id}" readonly="true"/>
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="stad#{locatie.id}" class="col-sm-2 col-form-label">Stad</label>
-                                        <div class="col-sm-10">
-                                            <h:inputText value="#{locatie.stad}" styleClass="form-control" id="displayNaamStad#{locatie.id}" readonly="true"/>
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="code#{locatie.id}" class="col-sm-2 col-form-label">Code</label>
-                                        <div class="col-sm-10">
-                                            <h:inputText value="#{locatie.code}" styleClass="form-control" id="displayNaamCode#{locatie.id}" readonly="true"/>
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <label for="land#{locatie.id}" class="col-sm-2 col-form-label">Land</label>
-                                        <div class="col-sm-10">
-                                            <h:inputText value="#{locatie.land}" styleClass="form-control" id="displayNaamLand#{locatie.id}" readonly="true"/>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        </ui:repeat>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 text-right">
+                            <h:commandButton action="#{LocatieController.newLocatie()}" value="Maak nieuwe locatie aan" styleClass="btn btn-primary">
+                                <f:ajax event="action" render="@all" onevent="showLocatieModal"/>
+                            </h:commandButton>
                         </div>
-                    </ui:repeat>
+                    </div>
                 </div>
-            </div>
+            </h:form>
             <script>
                 function showLocatieModal(data) {
                     if (data.status == "success") {
