--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -2,7 +2,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
 <h:body>
     <ui:composition template="/templates/layout.xhtml">
         <f:metadata >
@@ -39,7 +40,7 @@
                         <div class="form-group">
                             <label for="vertrek">Vertrekken?</label>
                             <div class="input-group">
-                                <h:inputText   value="#{ReisController.vertrekTijdZoek}" class="form-control border-radius border-right" id="vertrek"/>
+                                <h:inputText   value="#{ReisController.vertrekTijdZoek}" a:placeholder="yyyy/mm/dd" class="form-control border-radius border-right" id="vertrek"/>
                             </div>
                         </div>
                     </div>
@@ -48,7 +49,7 @@
                         <div class="form-group">
                             <label for="terugkeren">Terugkeren?</label>
                             <div class="input-group">
-                                <h:inputText type="date" value="#{ReisController.aankomstTijdZoek}" class="form-control border-radius border-right" id="terugkeren"/>
+                                <h:inputText type="date" value="#{ReisController.aankomstTijdZoek}" a:placeholder="yyyy/mm/dd" class="form-control border-radius border-right" id="terugkeren"/>
                             </div>
                         </div>
                     </div>
