--- a/src/main/webapp/gebruiker/overzichtBoeking.xhtml
+++ b/src/main/webapp/gebruiker/overzichtBoeking.xhtml
@@ -12,37 +12,51 @@
         </f:metadata>
         <ui:define name="title">Overzicht boeking</ui:define>
         <ui:define name="content">
-            <div>
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-5">
-                            <label>
-                                #{BookingController.geslecteerdeReis.vertrekLocatie.land}, #{BookingController.geslecteerdeReis.vertrekLocatie.naam}
-                                ---> #{BookingController.geslecteerdeReis.aankomstLocatie.land}, #{BookingController.geslecteerdeReis.aankomstLocatie.naam}
-                            </label>
-                            <label> #{BookingController.geslecteerdeReis.vertrekTijd.time} --->  #{BookingController.geslecteerdeReis.aankomstTijd.time} </label>
-                            <label>#{BookingController.geslecteerdeReis.transportmiddel}</label><br></br>
-                            <label>#{BookingController.geslecteerdeReis.prijsPerPersoon}</label>
-                        </div>
-                        <div class="col-md-7">
-                            <h:form class="login-form">
-                                <div class="form-group">
-                                    <label >Totaal bedrag : #{BookingController.nieuweBooking.aantalPersonen} * #{BookingController.nieuweBooking.prijsPPTeBetalen} = #{BookingController.nieuweBooking.prijsPPTeBetalen * BookingController.nieuweBooking.aantalPersonen}</label>
-                                </div>
-
-                                <div class="form-check">
-                                    <a href="../index.xhtml">Terug</a>
-
-                                    <h:commandButton value="Reserveren" class="btn btn-primary  float-right" action="#{BookingController.reserveerBooking(GebruikerController.aangemeldeGebruiker.id)}" />
-                                    <h:commandButton value="PayPal" class="btn btn-primary mr-2 float-right" action="#{BookingController.betaalBooking(GebruikerController.aangemeldeGebruiker.id)}" />
-                                    <h:commandButton value="Bancontact" class="btn btn-primary mr-2 float-right" action="#{BookingController.betaalBooking(GebruikerController.aangemeldeGebruiker.id)}" />
-
-                                </div>
-                            </h:form>
+                        <div class="col-12">
+                            <div class="card card-booking mb-5">
+                                <h:form>
+                                    <div class="card-img-top card-img-top-reizen" style="background-image: url(#{BookingController.geslecteerdeReis.foto})"/>
+                                    <h5 class="card-header">Reis</h5>
+                                    <div class="card-body p-3">
+                                        <div class="card-title row">
+                                            <div class="col">
+                                                <h3 class="reistitle">#{BookingController.geslecteerdeReis.vertrekLocatie.naam}</h3>
+                                                <p class="card-text"><i class="far fa-calendar-alt fa-fw"></i> #{BookingController.geslecteerdeReis.vertrekDatum} #{BookingController.geslecteerdeReis.vertrekTijd}</p>
+                                                <p class="card-text"><i class="fas fa-plane-departure fa-fw"></i> #{BookingController.geslecteerdeReis.vertrekLocatie.stad} (#{BookingController.geslecteerdeReis.vertrekLocatie.code}) - #{BookingController.geslecteerdeReis.vertrekLocatie.land}</p>
+                                            </div>
+                                            <div class="col-auto">
+                                                <ui:fragment rendered="#{BookingController.geslecteerdeReis.transportmiddel == 'bus'}">
+                                                    <h3 class="reistitle"><i class="fas fa-bus fa-lg fa-fw"></i></h3>
+                                                </ui:fragment>
+                                                <ui:fragment rendered="#{BookingController.geslecteerdeReis.transportmiddel == 'vliegtuig'}">
+                                                    <h3 class="reistitle"><i class="fas fa-plane fa-lg fa-fw"></i></h3>
+                                                </ui:fragment>
+                                            </div>
+                                            <div class="col text-right">
+                                                <h3 class="reistitle">#{BookingController.geslecteerdeReis.aankomstLocatie.naam}</h3>
+                                                <p class="card-text"> #{BookingController.geslecteerdeReis.aankomstDatum} #{BookingController.geslecteerdeReis.aankomstTijd} <i class="far fa-calendar-alt fa-fw"></i></p>
+                                                <p class="card-text">#{BookingController.geslecteerdeReis.aankomstLocatie.stad} (#{BookingController.geslecteerdeReis.aankomstLocatie.code}) - #{BookingController.geslecteerdeReis.aankomstLocatie.land} <i class="fas fa-plane-arrival fa-fw"></i></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <h5 class="card-header">Te betalen</h5>
+                                    <div class="card-body">
+                                        <h4 class="reistitle"><i class="fas fa-euro-sign fa-fw"></i>#{BookingController.geslecteerdeReis.prijsPerPersoon} x #{BookingController.nieuweBooking.aantalPersonen} personen = <i class="fas fa-euro-sign fa-fw"></i> #{BookingController.nieuweBooking.prijsPPTeBetalen * BookingController.nieuweBooking.aantalPersonen}</h4>
+                                    </div>
+                                    <div class="card-footer">
+                                        <div class="form-check text-right">
+                                            <h:commandButton value="Reserveren" class="btn bestelbtn mr-2" action="#{BookingController.reserveerBooking(GebruikerController.aangemeldeGebruiker.id)}" />
+                                            <h:commandButton value="PayPal" class="btn bestelbtn mr-2 " action="#{BookingController.betaalBooking(GebruikerController.aangemeldeGebruiker.id)}" />
+                                            <h:commandButton value="Bancontact" class="btn bestelbtn mr-2" action="#{BookingController.betaalBooking(GebruikerController.aangemeldeGebruiker.id)}" />
+                                        </div>
+                                    </div>
+                                </h:form>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </ui:define>
     </ui:composition>
 </h:body>
