--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -31,7 +31,7 @@
                             <div class="form-group">
                                 <label for="locatie">Naar?</label>
                                 <div class="input-group">
-                                    <h:inputText  value="#{ReisController.locatieZoek}" class="form-control border-radius border-right" id="locatie"/>
+                                    <h:inputText  value="#{ReisController.locatieZoek}" a:placeholder="Frankrijk.." class="form-control border-radius border-right" id="locatie"/>
                                 </div>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
 
                     <div class="col-md-3 col-sm-6">
                         <div class="form-group">
-                            <label for="terugkeren">Terugkeren?</label>
+                            <label for="terugkeren">Aankomen?</label>
                             <div class="input-group">
                                 <h:inputText type="date" value="#{ReisController.aankomstTijdZoek}" a:placeholder="yyyy/mm/dd" class="form-control border-radius border-right" id="terugkeren"/>
                             </div>
