fixes en opmaak

--- a/src/main/webapp/admin/boekingen.xhtml
+++ b/src/main/webapp/admin/boekingen.xhtml
@@ -17,8 +17,8 @@
         <ui:define name="title">Boekingen bekijken</ui:define>
         <ui:define name="content">
             <h:form>
-                <div class="container">
-                    <div class="col">
+            <div class="container">
+                    <div class="col mt-3 mb-3 admintitle">
                         <h1>Boekingen bekijken</h1>
                     </div>
                     <div class="accordion" id="accordionBookingen">
@@ -74,8 +74,6 @@
                     </div>
                 </div>
             </h:form>
-
-
         </ui:define>
     </ui:composition>
 </h:body>
