--- a/src/main/webapp/bezoeker/registreer.xhtml
+++ b/src/main/webapp/bezoeker/registreer.xhtml
@@ -46,7 +46,7 @@
                                     <p:inputText value="#{GebruikerController.gebruiker.gemeente}" type="text" class="form-control" />
                                 </div>
                                 <div class="form-check">
-                                    <h:commandButton value="submit" class="btn btn-login float-right" action="#{GebruikerController.registreerGebruiker}" />
+                                    <h:commandButton value="registreren" class="btn btn-login float-right" action="#{GebruikerController.registreerGebruiker}" />
                                 </div>
                             </h:form>
                         </div>
