--- a/src/main/webapp/admin/gebruikers.xhtml
+++ b/src/main/webapp/admin/gebruikers.xhtml
@@ -18,8 +18,15 @@
         <ui:define name="content">
             <h:form>
                 <div class="container">
-                    <div class="col">
+                    <div class="col mt-3 admintitle">
                         <h1>Gebruikers beheren</h1>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-12 text-right">
+                            <h:commandButton action="#{GebruikerController.newGebruiker()}" value="Maak nieuwe gebruiker aan" styleClass="btn btn-primary">
+                                <f:ajax event="action" render="@all" onevent="showToevoegModal"/>
+                            </h:commandButton>
+                        </div>
                     </div>
                     <div class="modal fade" id="gebruikerModal" tabindex="-1" role="dialog" aria-labelledby="gebruikerModallabel" aria-hidden="true">
                         <div class="modal-dialog modal-lg" role="document">
@@ -166,7 +173,7 @@
                                 <div class="card-header" id="heading#{gebruiker.id}">
                                     <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse#{gebruiker.id}" aria-controls="collapse#{gebruiker.id}">
                                         <div class="row">
-                                            <div class="col-12">
+                                            <div class="col-6">
                                                 <h:outputText value="#{gebruiker}" />
                                             </div>
                                         </div>
@@ -222,13 +229,6 @@
                                 </div>
                             </div>
                         </ui:repeat>
-                    </div>
-                    <div class="row">
-                        <div class="col-12 text-right">
-                            <h:commandButton action="#{GebruikerController.newGebruiker()}" value="Maak nieuwe gebruiker aan" styleClass="btn btn-primary">
-                                <f:ajax event="action" render="@all" onevent="showToevoegModal"/>
-                            </h:commandButton>
-                        </div>
                     </div>
                 </div>
             </h:form>
