--- a/src/main/webapp/bezoeker/login.xhtml
+++ b/src/main/webapp/bezoeker/login.xhtml
@@ -18,7 +18,7 @@
                             <h2 class="text-center">Meld aan</h2>
                             <h:form class="login-form">
                                 <div class="form-group">
-                                    <label >Naam</label>
+                                    <label >Email</label>
                                     <p:inputText value="#{GebruikerController.gebruiker.email}"  type="text" class="form-control"/>
                                 </div>
                                 <div class="form-group">
